--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -4,20 +4,12 @@
 @source "./**/*.{ts,tsx,js,jsx,mdx}";
 @source "../../../packages/**/*.{ts,tsx,js,jsx,mdx}";
 
-:root {
-  --primary-50: #f4f5f5;
-  --primary-100: #bcc3c4;
-  --primary-200: #849293;
-  --primary-300: #4c6062;
-  --primary-400: #1d3538;
-  --primary-500: #1a2e31;
-  --primary-600: #16282a;
-  --primary-700: #122123;
-  --primary-800: #0f1a1c;
-  --primary-900: #0b1415;
-  --primary-950: #070d0e;
+* {
+  box-sizing: border-box !important;
+  font-family: var(--font-yekanbakh);
 }
-/* :root {
+
+:root {
   --primary-50: #f4f6f6;
   --primary-100: #bfcbc6;
   --primary-200: #899f97;
@@ -29,8 +21,26 @@
   --primary-800: #13261f;
   --primary-900: #0e1c17;
   --primary-950: #09130f;
+
+  --secondary-50: #fcfaf7;
+  --secondary-100: #ebe3cf;
+  --secondary-200: #dacca8;
+  --secondary-300: #c9b580;
+  --secondary-400: #b29b5b;
+  --secondary-500: #9b8750;
+  --secondary-600: #857444;
+  --secondary-700: #6e6039;
+  --secondary-800: #584d2d;
+  --secondary-900: #413922;
+  --secondary-950: #2b2516;
+
+  --auth-header-height-mobile: 72px;
 }
-*/
+
+@theme inline {
+  --height-auth-header-height-mobile: var(--auth-header-height-mobile);
+}
+
 .input-border-b-glow {
   position: relative;
 }
